--- a/.env
+++ b/.env
@@ -17,4 +17,5 @@ EXWORLDS_ADMIN_PASSWORD="a"
 
 # Salt for password
 GLOBAL_PASSWORD_SALT="bad salt for passwords"
+# Salt for token
 GLOBAL_TOKEN_SALT="Another bad salt for tokens"
