Docker compose compatibility added.

--- a/.env
+++ b/.env
@@ -15,7 +15,6 @@ MONGO_EXWORLDS_PASSWORD="devp"
 EXWORLDS_ADMIN_USERNAME="a"
 EXWORLDS_ADMIN_PASSWORD="a"
 
-# Salt for password
+# Salt for password and token
 GLOBAL_PASSWORD_SALT="bad salt for passwords"
-# Salt for token
 GLOBAL_TOKEN_SALT="Another bad salt for tokens"
