--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+MONGODB_SERVER="localhost:27017"
+
 # Root db user data.
 # Needs to initiate a mongodb server and create user for exworlds database.
 # For: mongodb://server:port/admin
