db_setup.py DEPRECATED. Rebuild app for working with Postgres

--- a/.env
+++ b/.env
@@ -1,16 +1,11 @@
-MONGODB_SERVER="localhost:27017"
+DB_SERVER="localhost:27017"
 
-# Root db user data.
+# Root db and user data.
 # Needs to initiate a mongodb server and create user for exworlds database.
 # For: mongodb://server:port/admin
-MONGO_INITDB_ROOT_USERNAME="devuser"
-MONGO_INITDB_ROOT_PASSWORD="devpasswd"
-
-# User data for exworlds database
-# Needs for more secured using app database.
-# For: mongodb://server:port/exworlds
-MONGO_EXWORLDS_USERNAME="devu"
-MONGO_EXWORLDS_PASSWORD="devp"
+POSTGRES_DB = "exworlds"
+POSTGRES_USER ="devuser"
+POSTGRES_PASSWORD ="devpasswd"
 
 # Admin for server
 # This is just a user in application
