Now users blueprint works with Postgres

--- a/.env
+++ b/.env
@@ -13,5 +13,9 @@ EXWORLDS_ADMIN_USERNAME="a"
 EXWORLDS_ADMIN_PASSWORD="a"
 
 # Salt for password and token
-GLOBAL_PASSWORD_SALT="bad salt for passwords"
-GLOBAL_TOKEN_SALT="Another bad salt for tokens"
+PASSWORD_SALT="bad salt for passwords"
+TOKEN_SALT="Another bad salt for tokens"
+
+# App settings
+JWT_SECRET="03lh6fhrl3pa91f2oyov4syba65sjwvemshe2-5xn1mv1wfhxa4v-mxtrzm6dvy-3dum8xd1awb1atqa1oy8cspv3p7zynoic6cf"
+REGISTRATION="allowed"
