--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "1.0.0"
 
 services:
-  mongodb:
+  postgres:
     container_name: postgres
     image: docker.io/postgres:latest
     env_file: .env
