--- a/app/assets/default_theme/config.json
+++ b/app/assets/default_theme/config.json
@@ -5,16 +5,19 @@
 		"lpaper...": {"action": "load_image", "value": "theme://images/lpaper.jpg"},
 		"test-grad": {"action": "make_gradient", "from": [0, 0], "to": [1, 1], "offsets": [0, 0.5, 1], "colors": [[0.5, 0, 0], [0, 0.5, 0], [0, 0, 0.5]]},
 		"test-plain-color": {"action": "make_plain_color", "color": [0.5, 0, 0]},
-		
+
 		"button-normal-stylebox": {"action": "make_stylebox", "corner": [25, 25, 25, 25], "color": [0.123, 0.179, 0.205], "cont_margins": [5, 5, 5, 5]},
 		"button-hover-stylebox": {"action": "make_stylebox", "corner": [25, 25, 25, 25], "color": [0.196, 0.294, 0.329], "cont_margins": [5, 5, 5, 5]},
 		"button-pressed-stylebox": {"action": "make_stylebox", "corner": [25, 25, 25, 25], "color": [0.329, 0.502, 0.569], "cont_margins": [5, 5, 5, 5]},
 		"button-disabled-stylebox": {"action": "make_stylebox", "corner": [25, 25, 25, 25], "color": [0.388, 0.431, 0.451], "cont_margins": [5, 5, 5, 5]},
 
-		"default-panel": {"action": "make_stylebox", "corner": [0, 0, 0, 0], "color": [0.123, 0.179, 0.205, 0.4], "cont_margins": [5, 5, 5, 5]}
+		"default-panel": {"action": "make_stylebox", "corner": [0, 0, 0, 0], "color": [0.123, 0.179, 0.205, 0.4], "cont_margins": [5, 5, 5, 5]},
+
+		"default-subwin-border": {"action": "make_stylebox", "corner": [0, 0, 0, 0], "expand": [5, 35, 5, 5], "color": [0.196, 0.294, 0.329], "cont_margins": [5, 5, 5, 5]}
 	},
 	"zones": {
 		"default": {
+			"subwindow-border": "default-subwin-border",
 			"background": "paper_bg",
 			"content-panel": "default-panel",
 			"button/normal": "button-normal-stylebox",
@@ -25,7 +28,8 @@
 		"server-selection": {
 			"server-item/normal": "button-normal-stylebox",
 			"server-item/hover": "button-hover-stylebox",
-			"server-item/selected": "button-pressed-stylebox"
+			"server-item/selected": "button-pressed-stylebox",
+			"server_settings": "test-grad"
 		}
 	}
 }
