--- a/app/assets/default_theme/config.json
+++ b/app/assets/default_theme/config.json
@@ -1,8 +1,8 @@
 {
 	"codename": "default_theme",
 	"resources": {
-		"paper_bg": {"action": "load_image", "value": "theme://images/paper.jpg"},
-		"lpaper...": {"action": "load_image", "value": "theme://images/lpaper.jpg"},
+		"paper_bg": {"action": "load_image", "path": "theme://images/paper.jpg"},
+		"lpaper...": {"action": "load_image", "path": "theme://images/lpaper.jpg"},
 		"test-grad": {"action": "make_gradient", "from": [0, 0], "to": [1, 1], "offsets": [0, 0.5, 1], "colors": [[0.5, 0, 0], [0, 0.5, 0], [0, 0, 0.5]]},
 		"test-plain-color": {"action": "make_plain_color", "color": [0.5, 0, 0]},
 
