--- a/app/assets/default_theme/config.json
+++ b/app/assets/default_theme/config.json
@@ -13,7 +13,11 @@
 
 		"default-panel": {"action": "make_stylebox", "corner": [0, 0, 0, 0], "color": [0.123, 0.179, 0.205, 0.4], "cont_margins": [5, 5, 5, 5]},
 
-		"default-subwin-border": {"action": "make_stylebox", "corner": [0, 0, 0, 0], "expand": [5, 35, 5, 5], "color": [0.196, 0.294, 0.329], "cont_margins": [5, 5, 5, 5]}
+		"default-subwin-border": {"action": "make_stylebox", "corner": [0, 0, 0, 0], "expand": [5, 35, 5, 5], "color": [0.196, 0.294, 0.329], "cont_margins": [5, 5, 5, 5]},
+		
+		"pacifico-font": {"action": "load_font", "path": "theme://fonts/PacificoRegular.ttf"},
+		"base-font-color": {"action": "make_color", "color": [1, 1, 1]}
+
 	},
 	"zones": {
 		"default": {
@@ -23,13 +27,16 @@
 			"button/normal": "button-normal-stylebox",
 			"button/hover": "button-hover-stylebox",
 			"button/pressed": "button-pressed-stylebox",
-			"button/disabled": "button-disabled-stylebox"
+			"button/disabled": "button-disabled-stylebox",
+			"label/font-color": "base-font-color"
 		},
 		"server-selection": {
 			"server-item/normal": "button-normal-stylebox",
 			"server-item/hover": "button-hover-stylebox",
 			"server-item/selected": "button-pressed-stylebox",
-			"server_settings": "test-grad"
+			"server_settings": "test-grad",
+
+			"exworlds-title/font": "pacifico-font"
 		}
 	}
 }
